# ujiancbt

./: .gitignore  collect_static.sh  docker-compose.yml  manage.py  package.json  requirements.txt  run.sh  screen.sh  tailwind.config.ts  vercel.json
admin/: .env  package-lock.json  package.json
admin/prisma/: schema.prisma
admin/src/app/: layout.tsx  page.tsx
admin/src/utils/: constant.ts
backend/: .env_copy  .gitignore  Cargo.toml  Dockerfile  app.py  diesel.toml  requirements.txt
backend/alembic/: env.py
backend/api/: auth.py  role.py  user.py
backend/migrations/2025-02-20-154645_create_users/: up.sql
backend/models/: role.py  user.py
backend/schemas/: auth.py  role.py  user.py
backend/src/: main.rs  schema.rs
backend/src/config/: apache_kafka.rs  database.rs  elasticsearch.rs  mod.rs  redis.rs  swagger_docs.rs
backend/src/handlers/: user.rs
backend/src/models/: user.rs
backend/utils/: auth.py  backup_database.py  config.py  data_must_exist_db.py  database.py  error_response.py  hashed_password.py  remove_orphaned_files.py  router.py  run_shell_command.py
frontend/: Dockerfile
src/app/: layout.tsx  loading.tsx  page.tsx
src/utils/prisma/: index.ts
static/script/: script.js
ujiancbt/: admin.py  asgi.py  models.py  settings.py  urls.py  utils.py  views.py  wsgi.py
ujiancbt/templates/: 404.html  base.html
ujiancbt/templates/admins/: backup_and_restore.html  cbt_exam_result.html  class_list.html  dashboard.html  exam_schedule_data.html  (+11 more)
user/: .env  package-lock.json  package.json  tailwind.config.ts
user/prisma/: schema.prisma
(+70 files in other folders)
