[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
chrono = { version = "0.4.39", features = ["serde"] }
diesel = { version = "2.2.7", features = ["postgres", "r2d2", "chrono"] }
dotenvy = "0.15.7"
elasticsearch = "8.17.0-alpha.1"
rdkafka = { version = "0.37.0", features = ["tokio", "cmake-build"] }
redis = { version = "0.29.0", features = ["tokio-comp"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["full"] }
utoipa = { version = "5.3.1", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["actix-web"] }
